<resources>
    <string name="app_name">G.A.D.A.</string>
    <string name="Default">You Should Never See This</string>

    <string name="SignInHeader">Gintjee\'s Aca Deca Assistant</string>
    <string name="LoginOldHeader">Existing User Sign-In Page</string>
    <string name="LoginNewHeader">New User Sign-In Page</string>
    <string name="HomeHeader">Home Page</string>
    <string name="ProfileHeader">User Profile Page</string>
    <string name="ClassListHeader">Class List Page</string>
    <string name="SubjectiveHeader">Subjective Home Page</string>
    <string name="ObjectiveHeader">Objective Home Page</string>
    <string name="ScheduleHeader">Class Schedule Page</string>

    <string name="LabelAbout">Created by: Matthew Gintjee</string>
    <string name="LabelVersion">Version 1.00</string>
    <string name="LabelCreatedOn">Created On:</string>
    <string name="LabelClassCode">Class Code:</string>
    <string name="LabelUserType">User Type:</string>
    <string name="LabelUserID">User ID:</string>
    <string name="LabelUserHandle">User Handle:</string>
    <string name="LabelUserName">User Name:</string>
    <string name="LabelUserProfile">User Profile:</string>
    <string name="LabelUserSpeech">User Speech:</string>
    <string name="LabelUserTeam">User Team:</string>
    <string name="LabelPassword">Password:</string>
    <string name="LabelPasswordAgain">Re-Type Password:</string>
    <string name="LabelShowPassword">Show Password</string>
    <string name="LabelSamePassword">Same Password</string>

    <string name="HintClassCode">Enter your Class Code</string>
    <string name="HintUserHandle">Enter your User Handle</string>
    <string name="HintName">Enter your Name</string>
    <string name="HintPassword">Enter your Password</string>

    <string name="SignInButtonNew">Register a New user</string>
    <string name="SignInButtonOld">Sign-in as Existing user</string>

    <string name="LoginButtonCancel">Cancel</string>
    <string name="LoginButtonSignIn">Sign-in</string>

    <string name="HomeButtonMyProfile">View My Profile</string>
    <string name="HomeButtonSignOut">Sign-Out</string>
    <string name="HomeButtonObjective">View Objective Materials</string>
    <string name="HomeButtonSubjective">View Subjective Materials</string>
    <string name="HomeButtonSchedule">View Schedule</string>
    <string name="HomeButtonClassList">View Class List</string>
    <string name="ButtonViewSpeech">View Speech</string>

    <string name="ButtonGoBack">Go Back</string>
    <string name="ProfileButtonEnableEdit">Enable Edit</string>
    <string name="ProfileButtonDisableEdit">Disable Edit</string>
    <string name="ProfileButtonSaveChanges">Save Changes</string>

    <string name="ClassListButtonViewProfile">Profile</string>
    <string name="ClassListButtonViewSpeech">Speech</string>

    <string name="SubjectiveButtonEssay">View Essay Materials</string>
    <string name="SubjectiveButtonInterview">View Interview Materials</string>
    <string name="SubjectiveButtonSpeech">View Speech Materials</string>

    <string name="ObjectiveButtonFineArts">View Arts Materials</string>
    <string name="ObjectiveButtonEconomics">View Economics Materials</string>
    <string name="ObjectiveButtonLiterature">View Literature Materials</string>
    <string name="ObjectiveButtonMath">View Math Materials</string>
    <string name="ObjectiveButtonMusic">View Music Materials</string>
    <string name="ObjectiveButtonScience">View Science Materials</string>
    <string name="ObjectiveButtonSocialScience">View Social Science Materials</string>

    <string name="DialogClose">Close Dialog</string>
    <string name="DialogCancel">Cancel</string>
    <string name="DialogConfirm">Confirm</string>

    <string-array name="SpinnerArrayUserTeam">
        <item>Unassigned</item>
        <item>Team C</item>
        <item>Team B</item>
        <item>Team A</item>
    </string-array>

    <string-array name="SpinnerArrayUserType">
        <item>User</item>
        <item>Mod</item>
        <item>Admin</item>
    </string-array>

</resources>
