<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/UserInfoRowTV_UserHandle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Default"
        android:textSize="14sp" />

    <Button
        android:id="@+id/UserInfoRowB_UserSpeech"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ClassListButtonViewSpeech"
        android:textSize="14sp" />

    <Button
        android:id="@+id/UserInfoRowB_UserProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ClassListButtonViewProfile"
        android:textSize="14sp" />
</LinearLayout>