<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueSea"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GoldSky"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ProfileTV_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProfileHeader"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ProfileTV_ClassCodeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelClassCode"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ProfileTV_ClassCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Default"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ProfileTV_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelUserName"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ProfileET_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/HintName"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ProfileTV_UserHandle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelUserHandle"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ProfileET_UserHandle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/HintUserHandle"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileLL_SelfProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ProfileTV_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelPassword"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ProfileET_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/HintPassword"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileLL_SelfProfileMods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ProfileB_Cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/OrangeSun"
                android:text="@string/ProfileButtonGoBack"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ProfileB_SaveChanges"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/OrangeSun"
                android:text="@string/ProfileButtonSaveChanges"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
