<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueSea"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GoldSky"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NewUserTV_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginNewHeader"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/NewUserTV_ClassCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/LabelClassCode"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/NewUserET_ClassCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/HintClassCode"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/NewUserTV_UserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/LabelUserName"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/NewUserET_UserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/HintName"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/NewUserTV_UserHandle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/LabelUserHandle"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/NewUserET_UserHandle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/HintUserHandle"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/NewUserTV_Password1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/LabelPassword"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/NewUserET_Password1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/HintPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/NewUserTV_Password2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/LabelPasswordAgain"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/NewUserET_Password2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/HintPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/NewUserCB_SamePassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:text="@string/LabelSamePassword" />

                    <CheckBox
                        android:id="@+id/NewUserCB_ShowPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/LabelShowPassword" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/NewUserB_Cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/GrayRock"
                android:text="@string/LoginButtonCancel"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/NewUserB_SignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/GrayRock"
                android:text="@string/LoginButtonSignIn"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
