<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueSea"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GoldSky"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignInTV_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignInHeader"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SignInTV_VersionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LabelVersion"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/SignInB_OldUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/OrangeSun"
                android:text="@string/SignInButtonOld"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/SignInB_NewUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/OrangeSun"
                android:text="@string/SignInButtonNew"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BlueSea"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignInTV_About"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/LabelAbout"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>
